Adicionando toda a URL no css para testar se a imagem carrega

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3034,7 +3034,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("images/sao-mateus.png");
+		background-image: url("images/overlay.png"), url("https://quebradev.github.io/images/sao-mateus.png");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
