correção das fotos

--- a/themes/quebradev/layout/_partial/members.ejs
+++ b/themes/quebradev/layout/_partial/members.ejs
@@ -6,7 +6,7 @@
     <% members.forEach(function(member){ %>
         <div class="member col-6 col-sm-4 col-lg-3 row">
             <div class="member-photo col-12">
-                <img src="<%= member.photo %>" alt="<%= member.name %>" class="col-12">
+                <img src="/images/<%= member.photo %>" alt="<%= member.name %>" class="col-12">
 
                 <div class="member-info col-12">
                     <div class="member-name"><%= member.name %></div>
