--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -2,13 +2,13 @@
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="/">Episódios</a>
+                <a href="/" class="glitch" data-text="Episódios">Episódios</a>
             </li>
         </ul>
     </div>
     <div class="mx-auto order-0">
         <a class="navbar-brand mx-auto" href="/">
-            <img src="/images/logo.png" alt="">
+            <img src="/images/logo.svg" alt="">
         </a>
         <button class="navbar-toggler atenas-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a href="/sobre">Sobre</a>
+                <a href="/sobre" class="glitch" data-text="Sobre">Sobre</a>
             </li>
         </ul>
     </div>
