--- a/themes/quebradev/source/css/podcasts.scss
+++ b/themes/quebradev/source/css/podcasts.scss
@@ -86,6 +86,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
       }
+      .podcast-description {
+        margin-top: 25px;
+      }
     }
   }
 }
