--- a/themes/quebradev/layout/_partial/podcast.ejs
+++ b/themes/quebradev/layout/_partial/podcast.ejs
@@ -6,8 +6,11 @@
     </header>
 
     <div class="podcast-body" itemprop="articleBody">
-        <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= post.soundcloud_id %>&color=%232f2f2f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-
+        <% if (post.mp3) { %>
+            
+        <% } else { %>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= post.soundcloud_id %>&color=%232f2f2f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <% } %>
         <div class="row">
             <div class="col-12 col-sm-6">
                 <h2 class="bordered-left">Sobre este episódio</h2>
