--- a/themes/quebradev/layout/_partial/podcast.ejs
+++ b/themes/quebradev/layout/_partial/podcast.ejs
@@ -7,7 +7,9 @@
 
     <div class="podcast-body" itemprop="articleBody">
         <% if (post.mp3) { %>
-            
+            <audio controls id="postMp3" data-title="<%= post.title %>">
+                <source src="<%= post.mp3 %>" type="audio/mpeg">
+            </audio>
         <% } else { %>
             <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= post.soundcloud_id %>&color=%232f2f2f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         <% } %>
@@ -22,8 +24,12 @@
 
             <div class="col-12 col-sm-6">
                 <h2 class="bordered-left">Download</h2>
-                <p>Faça o download do episódio (MP3) clicando <a href="https://api.soundcloud.com/tracks/<%= post.soundcloud_id %>/download?client_id=LBCcHmRB8XSStWL6wKH2HPACspQlXg2P">AQUI</a></p>
 
+                <% if (post.mp3) { %>
+                    <p>Faça o download do episódio (MP3) clicando <a href="<%= post.mp3 %>" download>AQUI</a></p>
+                <% } else { %>
+                    <p>Faça o download do episódio (MP3) clicando <a href="https://api.soundcloud.com/tracks/<%= post.soundcloud_id %>/download?client_id=LBCcHmRB8XSStWL6wKH2HPACspQlXg2P">AQUI</a></p>
+                <% } %>
                 <h3 class="bordered-left">Participantes</h3>
                 <ul class="podcast-participants">
                     <% post.participants.forEach(function(participant) { %>
@@ -59,21 +65,47 @@
     <div class="podcast-footer">
         <div id="disqus_thread"></div>
         <script>
-          /**
-           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-          /*
-          var disqus_config = function () {
-          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-          };
-          */
-          (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://quebradev-github-io.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', + new Date());
-            (d.head || d.body).appendChild(s);
-          })();
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://quebradev-github-io.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', + new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', '<%= theme.google_analytics %>', 'auto');
+
+            var audio = document.getElementById("postMp3");
+            audio.onended = function() {
+                ga('send', {
+                    hitType: 'event',
+                    eventCategory: 'Audios',
+                    eventAction: 'ended',
+                    eventLabel: audio.dataset.title
+                });
+            };
+            audio.onplay = function() {
+                console.log('play')
+                ga('send', {
+                    hitType: 'event',
+                    eventCategory: 'Audios',
+                    eventAction: 'play',
+                    eventLabel: audio.dataset.title
+                });
+            };
         </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
