--- a/themes/quebradev/layout/_partial/podcasts.ejs
+++ b/themes/quebradev/layout/_partial/podcasts.ejs
@@ -11,7 +11,7 @@
                         </a>
                     </div>
                     <a href="<%- url_for(post.path) %>" title="<%= post.title %>" class="podcast-cover col-12 col-md-5">
-                        <img src="<%= post.media %>" alt="<%= post.title %> Cover" class="col-12">
+                        <img src="<%= post.cover %>" alt="<%= post.title %> Cover" class="col-12">
                     </a>
                     <div class="podcast-body col-12 col-md-6">
                         <a href="<%- url_for(post.path) %>" title="<%= post.title %>"><p class="podcast-description"><%= post.description %></p></a>
