--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -1,24 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a href="/" class="glitch" data-text="Episódios">Episódios</a>
-            </li>
-        </ul>
+<nav class="site-header sticky-top py-1">
+    <div class="container d-flex flex-column flex-md-row">
+        <a href="/" class="py-2 d-none d-md-inline-block">Episódios</a>
+        <a href="/sobre" class="py-2 d-none d-md-inline-block">Sobre</a>
     </div>
+</nav>
+
+<div class="navbar navbar-expand-lg navbar-dark">
     <div class="mx-auto order-0">
         <a class="navbar-brand mx-auto" href="/">
             <img src="/images/logo.svg" alt="">
         </a>
-        <button class="navbar-toggler atenas-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-            <span class="navbar-toggler-icon"></span>
-        </button>
     </div>
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <!-- <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a href="/sobre" class="glitch" data-text="Sobre">Sobre</a>
+                <a href="/sobre" data-text="Sobre">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a href="/" data-text="Episódios">Episódios</a>
             </li>
         </ul>
-    </div>
-</nav>
+    </div> -->
+</div>
