--- a/themes/quebradev/source/css/podcasts.scss
+++ b/themes/quebradev/source/css/podcasts.scss
@@ -1,3 +1,16 @@
+.filter {
+  margin-bottom: 20px;
+
+  .type-description {
+    margin: 30px 0;
+    display: none;
+  }
+
+  .ep-count {
+    margin-top: 30px;
+  }
+}
+
 .podcasts-wrapper {
   .podcast-item {
     background-color: #000000;
