--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -1,6 +1,7 @@
 <nav class="site-header sticky-top py-1">
     <div class="container d-flex flex-column flex-md-row justify-content-center">
         <a href="/" class="py-2">Episódios</a>
+        <a href="/apoiadores" class="py-2">Apoiadores</a>
         <a href="/sobre" class="py-2">Sobre</a>
     </div>
 </nav>
