--- a/themes/quebradev/layout/_partial/head.ejs
+++ b/themes/quebradev/layout/_partial/head.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%- open_graph({twitter_id: theme.twitter}) %>
     <link rel="icon" href="<%- theme.favicon %>">
-    <meta property="og:image" content="<%if(page.media){%><%= config.url + page.media%><%}else{%><%=theme.media%><%}%>">
+    <meta property="og:image" content="<%if(page.cover){%><%= config.url + page.cover%><%}else{%><%=theme.cover%><%}%>">
 
     <%- css('css/app') %>
     <%- js('js/app') %>
