adiciona o link do itunes e corrige a paginação da pagina inicial

--- a/themes/quebradev/layout/_partial/pagination.ejs
+++ b/themes/quebradev/layout/_partial/pagination.ejs
@@ -1,17 +1,17 @@
 <div class="pagination-buttons">
     <% if (page.prev) { %>
         <% if (page.prev === 1) { %>
-        <a class="btn btn-quebradev" href="<%- url_for(' ') %>">
-            <% } else { %>
-            <a class="btn btn-quebradev" href="<%- url_for(page.prev_link) %>">
-                <% } %>
-                <span>< Novos</span>
+            <a class="btn btn-quebradev" href="<%- url_for(' ') %>">
+        <% } else { %>
+                <a class="btn btn-quebradev" href="<%- url_for(page.prev_link) %>">
+        <% } %>
+                    <span>< Página Anterior</span>
+                </a>
             </a>
-        </a>
     <% } %>
     <% if (page.next) { %>
         <a class="btn btn-quebradev" href="<%- url_for(page.next_link) %>">
-            <span>Antigos ></span>
+            <span>Próxima Página ></span>
         </a>
     <% } %>
 </div>
