--- a/themes/quebradev/source/css/base.scss
+++ b/themes/quebradev/source/css/base.scss
@@ -40,7 +40,8 @@ a, .nav-item a {
 
   .btn {
     font-size: 21px;
-
+    color: #fff;
+    
     &:hover {
       text-decoration: underline;
     }
