--- a/themes/quebradev/layout/_partial/members.ejs
+++ b/themes/quebradev/layout/_partial/members.ejs
@@ -3,7 +3,7 @@
         <h3 class="bordered-left">Vozes do QuebraDev</h3>
     </div>
 
-    <% members.forEach(function(member){ %>
+    <% data.forEach(function(member){ %>
         <div class="member col-6 col-sm-4 col-lg-3 row">
             <div class="member-photo col-12">
                 <img src="/images/<%= member.photo %>" alt="<%= member.name %>" class="col-12">
