correções na descrição do quebradev e endereço do linkedin

--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,3 +1,3 @@
 <section class="text-center description">
-    <h1>Um podcast de origem periférica e com destino voltado à origem.</h1>
+    <h1>Um movimento social que tem como objetivo democratizar a informação para periferia.</h1>
 </section>
