adiciona email de contato

--- a/themes/quebradev/layout/_partial/mediakit.ejs
+++ b/themes/quebradev/layout/_partial/mediakit.ejs
@@ -121,4 +121,8 @@
             </div>
         </div>
     </div>
+
+    <div class="text-center contact-email">
+        <p>Entre em contato através do email <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a></p>
+    </div>
 </div>
