--- a/themes/quebradev/source/css/mediakit.scss
+++ b/themes/quebradev/source/css/mediakit.scss
@@ -75,4 +75,10 @@
             }
         }
     }
+    
+    .contact-email {
+        margin-top: 30px;
+        font-size: 20px;
+        text-align: center;
+    }
 }
