adiciona pagina do apoie e algumas correções de títulos

--- a/themes/quebradev/layout/_partial/events.ejs
+++ b/themes/quebradev/layout/_partial/events.ejs
@@ -1,4 +1,8 @@
 <div class="events-wrapper row">
+    <div class="col-12">
+        <h1 class="bordered-left">Eventos</h1>
+    </div>
+
     <% data.forEach(function(event){ %>
         <div class="event col-lg-6 row">
             <h3><%= event.name %></h3>
