--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -3,6 +3,7 @@
         <a href="/" class="py-2">Episódios</a>
         <a href="/sobre" class="py-2">Sobre</a>
         <a href="/eventos" class="py-2">Eventos</a>
+        <a href="/apoie" class="py-2">Apoie</a>
     </div>
 </nav>
 
