--- a/themes/quebradev/layout/_partial/support.ejs
+++ b/themes/quebradev/layout/_partial/support.ejs
@@ -37,6 +37,10 @@
                 <img src="/images/quebradev-padrim.png" alt="Padrim QuebraDev - Apoie">
             </a>
         </div>
+
+        <div class="contact-mail text-center">
+            <p>Se precisar, entre em contato com a gente através do email <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a></p>
+        </div>
     </div>
 
     <% if (data) { %>
