--- a/themes/quebradev/source/css/events.scss
+++ b/themes/quebradev/source/css/events.scss
@@ -27,4 +27,9 @@
         text-align: center;
         font-size: 19px;
     }
+
+    a {
+        font-weight: bold;
+        text-decoration: underline;
+    }
 }
