--- a/themes/quebradev/source/css/events.scss
+++ b/themes/quebradev/source/css/events.scss
@@ -16,6 +16,14 @@
         p {
             width: 100%;
         }
+        
+        a {
+            text-decoration: underline;
+        }
+    }
+
+    .event.old {
+        opacity: 0.3;
     }
 }
 
