Pequena melhoria pra tirar barra da navbar

--- a/themes/quebradev/source/css/override-bootstrap.scss
+++ b/themes/quebradev/source/css/override-bootstrap.scss
@@ -17,7 +17,7 @@
     margin: 0 10px;
     font-size: 25px;
 
-    &:after {
+    &:not(:last-child):after {
       content: '';
       display: block;
       height: 12px;
