Adiciona calendário de Agosto/2019 e corrige CSS
Corrige CSS que quebrava colunas linha por linha por conta do tamanho da margem

--- a/themes/quebradev/layout/_partial/events.ejs
+++ b/themes/quebradev/layout/_partial/events.ejs
@@ -4,7 +4,7 @@
     </div>
 
     <% data.forEach(function(event){ %>
-        <div class="event col-lg-6 row <% if (event.old) { %> old <% } %>">
+        <div class="event col-6 <% if (event.old) { %> old <% } %>">
             <h3><%= event.name %></h3>
             <p><strong>Datas:</strong> <%= event.date %></p>
             <p><strong>Conteúdo:</strong> <%= event.description %></p>
