--- a/themes/quebradev/source/css/events.scss
+++ b/themes/quebradev/source/css/events.scss
@@ -9,6 +9,7 @@
     }
 
     .event {
+        max-width: 46%;
         border-left: 4px solid #fff;
         padding-left: 15px;
         margin: 15px;
