--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -8,9 +8,9 @@
 </nav>
 
 <div class="navbar navbar-expand-lg navbar-dark">
-    <div class="mx-auto order-0">
+    <div class="mx-auto order-0 mt-5">
         <a class="navbar-brand mx-auto" href="/">
-            <img src="/images/logo.svg" alt="">
+            <img src="/images/logo-pb.png" alt="">
         </a>
     </div>
     <!-- <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
