--- a/themes/quebradev/layout/_partial/events.ejs
+++ b/themes/quebradev/layout/_partial/events.ejs
@@ -1,6 +1,9 @@
 <div class="events-wrapper row">
     <div class="col-12">
         <h1 class="bordered-left">Eventos</h1>
+        <div class="text-center">
+            <p>Eventos que o QuebraDev estará presente</p>
+        </div>
     </div>
 
     <% data.forEach(function(event){ %>
