--- a/themes/quebradev/layout/_partial/support.ejs
+++ b/themes/quebradev/layout/_partial/support.ejs
@@ -45,9 +45,9 @@
 
     <% if (data) { %>
         <div class="col-12 supporters text-center">
-            <h4>Lista dos padrinhos do QuebraDev</h4>
+            <h4>Clique para ver a lista dos padrinhos do QuebraDev ❤️</h4>
             
-            <div class="row">
+            <div class="row support-list">
                 <% data.forEach(function(member){ %>
                     <div class="support col-6 col-sm-4 col-lg-2 text-center">
                         <p><%= member.name %></p>
