modificação mediakit e footer

--- a/themes/quebradev/layout/_partial/footer.ejs
+++ b/themes/quebradev/layout/_partial/footer.ejs
@@ -1,12 +1,12 @@
 <footer>
     <section class="container text-center">
         <section class="footer-support">
-            <h4>Apoiadores ❤️</h4>
+            <!-- <h4>Apoiadores ❤️</h4>
             <% for (var key in theme.support_links) { %>
                 <a href="<%= theme.support_links[key].link %>" target="_blank" title="<%= key %>">
                     <img src="/images/<%= key %>.png" alt="<%= key %>" height="<%= theme.support_links[key].height %>">
                 </a>
-            <% } %>
+            <% } %> -->
         </section>
     </section>
 
