--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -9,7 +9,7 @@
 
 <div class="navbar navbar-expand-lg navbar-dark">
     <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="/">
+        <a class="navbar-brand mx-auto" href="/" aria-label="Home">
             <img src="/images/logo.png" alt="">
         </a>
     </div>
