--- a/themes/quebradev/layout/_partial/head.ejs
+++ b/themes/quebradev/layout/_partial/head.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <% var title = page.title; %>
     <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%- open_graph({twitter_id: theme.twitter}) %>
     <link rel="icon" href="<%- theme.favicon %>">
     <meta property="og:image" content="<%if(page.cover){%><%= config.url + page.cover%><%}else{%><%=theme.cover%><%}%>">
