--- a/themes/quebradev/layout/_partial/footer.ejs
+++ b/themes/quebradev/layout/_partial/footer.ejs
@@ -19,7 +19,7 @@
             <a href="mailto:quebradev@gmail.com" title="Enviar email - QuebraDev"><%- fa_inline('envelope') %></a>
         </section>
 
-        <div class="quebradev-footer">QuebraDev - 2019</div>
+        <div class="quebradev-footer">QuebraDev - <%= new Date().getFullYear() %></div>
     </section>
 </footer>
 <%- partial('google-analytics') %>
