--- a/themes/quebradev/layout/_partial/podcasts.ejs
+++ b/themes/quebradev/layout/_partial/podcasts.ejs
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="row col-12 season-block">
             <div class="col-12 season-title">
-                <h3>Temporada 2 - <span>Inicio 11/03/2019</span></h3>
+                <h3>Temporada 2 - <span>Início 11/03/2019</span></h3>
             </div>
             <% page.posts.each(function(post){ %>
                 <%- partial('_partial/podcast-block', {post: post, season: 2}) %>
