fix(scripts): Move scripts from head to footer #60

--- a/themes/quebradev/layout/_partial/footer.ejs
+++ b/themes/quebradev/layout/_partial/footer.ejs
@@ -22,4 +22,5 @@
         <div class="quebradev-footer">QuebraDev - <%= new Date().getFullYear() %></div>
     </section>
 </footer>
+<%- js('js/app') %>
 <%- partial('google-analytics') %>
