--- a/themes/quebradev/layout/_partial/podcast.ejs
+++ b/themes/quebradev/layout/_partial/podcast.ejs
@@ -47,7 +47,7 @@
                                     <a href="https://www.instagram.com/<%= participant.instagram %>" target="_blank" title="<%= participant.name %> Instagram"><%- fa_inline('instagram', {prefix: 'fab'}) %></a>
                                 <% } %>
                                 <% if (participant.linkedin) { %>
-                                    <a href="https://www.linkedin.com/<%= participant.linkedin %>" target="_blank" title="<%= participant.name %> Linkedin"><%- fa_inline('linkedin', {prefix: 'fab'}) %></a>
+                                    <a href="https://www.linkedin.com/in/<%= participant.linkedin %>" target="_blank" title="<%= participant.name %> Linkedin"><%- fa_inline('linkedin', {prefix: 'fab'}) %></a>
                                 <% } %>
                             </li>
                         <% }) %>
