--- a/themes/quebradev/layout/_partial/podcast.ejs
+++ b/themes/quebradev/layout/_partial/podcast.ejs
@@ -11,7 +11,7 @@
                 <source src="<%= post.mp3 %>" type="audio/mpeg">
             </audio>
         <% } else { %>
-            <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/<%= post.soundcloud_id %>&color=%232f2f2f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe width="100%" height="200" scrolling="no" frameborder="no" src="<%= post.embed_url %>"></iframe>
         <% } %>
         <div class="row">
             <div class="col-12 col-sm-6">
@@ -23,14 +23,6 @@
             </div>
 
             <div class="col-12 col-sm-6">
-                <h2 class="bordered-left">Download</h2>
-
-                <% if (post.mp3) { %>
-                    <p>Faça o download do episódio (MP3) clicando <a href="<%= post.mp3 %>" download>AQUI</a></p>
-                <% } else { %>
-                    <p>Faça o download do episódio (MP3) clicando <a href="https://api.soundcloud.com/tracks/<%= post.soundcloud_id %>/download?client_id=LBCcHmRB8XSStWL6wKH2HPACspQlXg2P">AQUI</a></p>
-                <% } %>
-
                 <% if (post.participants) { %>
                     <h3 class="bordered-left">Participantes</h3>
                     <ul class="podcast-participants">
