--- a/themes/quebradev/layout/_partial/footer.ejs
+++ b/themes/quebradev/layout/_partial/footer.ejs
@@ -15,7 +15,7 @@
             <% for (var key in theme.footer_links) { %>
                 <a href="<%= theme.footer_links[key].link %>" target="_blank" title="QuebraDev <%= key %>"><%- fa_inline(key, {prefix: 'fab'}) %></a>
             <% } %>
-            <a href="http://feeds.soundcloud.com/users/soundcloud:users:449199045/sounds.rss" target="_blank" title="QuebraDev RSS"><%- fa_inline('rss') %></a>
+            <a href="https://anchor.fm/s/1c1d0328/podcast/rss" target="_blank" title="QuebraDev RSS"><%- fa_inline('rss') %></a>
             <a href="mailto:quebradev@gmail.com" title="Enviar email - QuebraDev"><%- fa_inline('envelope') %></a>
         </section>
 
