Adiciona pagina com explicacoes para criar um podcast

--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -4,6 +4,7 @@
         <a href="/sobre" class="py-2">Sobre</a>
         <a href="/eventos" class="py-2">Eventos</a>
         <a href="/apoie" class="py-2">Apoie</a>
+        <a href="/como-criar-um-podcast" class="py-2">Como criar um podcast?</a>
     </div>
 </nav>
 
