--- a/themes/quebradev/layout/_partial/pagination.ejs
+++ b/themes/quebradev/layout/_partial/pagination.ejs
@@ -5,13 +5,13 @@
         <% } else { %>
                 <a class="btn btn-quebradev" href="<%- url_for(page.prev_link) %>">
         <% } %>
-                    <span>< Página Anterior</span>
+                    <span>Página Anterior</span>
                 </a>
             </a>
     <% } %>
     <% if (page.next) { %>
         <a class="btn btn-quebradev" href="<%- url_for(page.next_link) %>">
-            <span>Próxima Página ></span>
+            <span>Próxima Página</span>
         </a>
     <% } %>
 </div>
