--- a/themes/quebradev/source/css/base.scss
+++ b/themes/quebradev/source/css/base.scss
@@ -24,6 +24,10 @@ a, .nav-item a {
   }
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .page-title, .bordered-left {
   color: #ffffff;
   margin-top: 30px;
