Adiciona videos e link com o template de pauta

--- a/themes/quebradev/layout/_partial/create-podcast.ejs
+++ b/themes/quebradev/layout/_partial/create-podcast.ejs
@@ -46,7 +46,7 @@
         <p>Após completar todos os assuntos, é necessário finalizar o episódio, tenha um texto pronto para a finalização. Aqui você pode falar as referencias, links para rede sociais, etc.</p>
         <p>Faça o que for melhor para seus ouvintes continuarem acompanhando e para que consigam te achar em todas as redes também.</p>
 
-        <p class="underline"><a href="https://drive.google.com/file/d/1FIGtkzJAWKFAkYCLsSREDIUoKlqy0ETP/view?usp=sharing" target="_blank">Clique aqui para ver um exemplo de template de pauta que utilizamos aqui no QuebraDev.</a></p>
+        <p class="underline"><a href="https://docs.google.com/document/d/1ApB1dPt9yZIO3kFOH_cvEx9wovdFUbkpxMxh9b7tw_4/edit?usp=sharing" target="_blank">Clique aqui para ver um exemplo de template de pauta que utilizamos aqui no QuebraDev.</a></p>
     </div>
 
     <div class="col-12">
@@ -62,7 +62,13 @@
 
         <p>O video abaixo explica uma pouco sobre a gravação no Discord:</p>
 
-        <iframe width="100%" height="400" src="https://www.youtube.com/embed/0000" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/VUW9iSxHQOQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p>Links úteis:</p>
+        <ul>
+            <li class="underline"><a href="https://discord.com" target="_blank">discord.com</a></li>
+            <li class="underline"><a href="https://craig.chat" target="_blank">craig.chat</a></li>
+        </ul>
     </div>
 
     <div class="col-12">
@@ -87,7 +93,18 @@
 
         <p>O video abaixo explica uma pouco sobre a edição:</p>
 
-        <iframe width="100%" height="400" src="https://www.youtube.com/embed/0000" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/5vPJP7-kBNE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p>O vídeo é bem curto, abaixo vai alguns links de canais recomendados sobre edição de podcasts:</p>
+        <ul>
+            <li class="underline"><a href="https://www.youtube.com/watch?v=6tFosHXX6H4" target="_blank">Podcast Studio - Audacity Edição & Gravação</a></li>
+            <li class="underline"><a href="https://www.youtube.com/watch?v=7A6sEWJbieA" target="_blank">Podcast Studio - Publicando o Episódio no Anchor</a></li>
+        </ul>
+
+        <p>Links úteis:</p>
+        <ul>
+            <li class="underline"><a href="https://www.audacityteam.org/download/" target="_blank">Página de download do Audacity</a></li>
+        </ul>
     </div>
 
     <div class="col-12">
