--- a/themes/quebradev/source/css/override-bootstrap.scss
+++ b/themes/quebradev/source/css/override-bootstrap.scss
@@ -1,14 +1,3 @@
-.navbar-toggler {
-  border: 1px solid #fff; // remove default button style
-  font-size: 30px;
-  border-radius: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-
-  &:active, &:focus {
-    outline: none;
-  }
-}
-
 .site-header {
   background: rgba(0, 0, 0, 0.8);
 
@@ -95,5 +84,9 @@ select.form-control {
         display: none;
       }
     }
+  }
+
+  .navbar .navbar-brand img {
+    height: 60px;
   }
 }
