Link com template de pauta

--- a/themes/quebradev/layout/_partial/create-podcast.ejs
+++ b/themes/quebradev/layout/_partial/create-podcast.ejs
@@ -46,7 +46,7 @@
         <p>Após completar todos os assuntos, é necessário finalizar o episódio, tenha um texto pronto para a finalização. Aqui você pode falar as referencias, links para rede sociais, etc.</p>
         <p>Faça o que for melhor para seus ouvintes continuarem acompanhando e para que consigam te achar em todas as redes também.</p>
 
-        <p class="underline"><a href="https://docs.google.com/document/d/1ApB1dPt9yZIO3kFOH_cvEx9wovdFUbkpxMxh9b7tw_4/edit?usp=sharing" target="_blank">Clique aqui para ver um exemplo de template de pauta que utilizamos aqui no QuebraDev.</a></p>
+        <p class="underline"><a href="https://github.com/QuebraDev/template-pauta" target="_blank">Clique aqui para ver um exemplo de template de pauta que utilizamos aqui no QuebraDev.</a></p>
     </div>
 
     <div class="col-12">
@@ -97,6 +97,7 @@
 
         <p>O vídeo é bem curto, abaixo vai alguns links de canais recomendados sobre edição de podcasts:</p>
         <ul>
+            <li class="underline"><a href="https://www.youtube.com/watch?v=fiHG4xgBBPY" target="_blank">Podcast Studio - Criar vírgulas com músicas</a></li>
             <li class="underline"><a href="https://www.youtube.com/watch?v=6tFosHXX6H4" target="_blank">Podcast Studio - Audacity Edição & Gravação</a></li>
             <li class="underline"><a href="https://www.youtube.com/watch?v=7A6sEWJbieA" target="_blank">Podcast Studio - Publicando o Episódio no Anchor</a></li>
         </ul>
