--- a/themes/quebradev/layout/_partial/podcasts.ejs
+++ b/themes/quebradev/layout/_partial/podcasts.ejs
@@ -24,6 +24,15 @@
     <div class="row">
         <div class="row col-12 season-block">
             <div class="col-12 season-title">
+                <h3>Temporada 4 - <span>Início 01/03/2021</span></h3>
+            </div>
+            <% page.posts.each(function(post){ %>
+                <%- partial('_partial/podcast-block', {post: post, season: 4}) %>
+            <% }) %>
+        </div>
+
+        <div class="row col-12 season-block">
+            <div class="col-12 season-title">
                 <h3>Edição Especial | Tô No Rumo - <span>Início 24/09/2020</span></h3>
             </div>
             <% page.posts.each(function(post){ %>
