--- a/themes/quebradev/layout/_partial/podcasts.ejs
+++ b/themes/quebradev/layout/_partial/podcasts.ejs
@@ -22,21 +22,21 @@
     </div>
 
     <div class="row">
-        <div class="row col-12 season-block">
+	<div class="row col-12 season-block">
             <div class="col-12 season-title">
-                <h3>Temporada 4 - <span>Início 01/03/2021</span></h3>
+                <h3>Temporada 5 - <span>Início 10/03/2022</span></h3>
             </div>
             <% page.posts.each(function(post){ %>
-                <%- partial('_partial/podcast-block', {post: post, season: 4}) %>
+                <%- partial('_partial/podcast-block', {post: post, season: 5}) %>
             <% }) %>
         </div>
 
         <div class="row col-12 season-block">
             <div class="col-12 season-title">
-                <h3>Edição Especial | Tô No Rumo - <span>Início 24/09/2020</span></h3>
+                <h3>Temporada 4 - <span>Início 01/03/2021 à 29/10/2021 - Encerrada</span></h3>
             </div>
             <% page.posts.each(function(post){ %>
-                <%- partial('_partial/podcast-block', {post: post, season: 'tonorumo'}) %>
+                <%- partial('_partial/podcast-block', {post: post, season: 4}) %>
             <% }) %>
         </div>
 
